# DoodleJump

./: .gitignore  CMakeLists.txt  Framework.h  build.bash  doodle_jump.bash  install_sdl.bash  run.bash
Framework/: CMakeLists.txt
Framework/src/: launch.cpp
src/: Actor.cpp  Actor.h  Doodle.cpp  Doodle.h  GameScene.cpp  GameScene.h  MainMenuScene.cpp  MainMenuScene.h  Platform.cpp  Platform.h  Scene.h  SpriteLocation.cpp  UIElement.cpp  game.cpp
src/actors/: Actor.cpp  Actor.h  Doodle.cpp  Doodle.h  Enemy.cpp  Enemy.h  Platform.cpp  Platform.h  Projectile.cpp  Projectile.h
src/collisions/: Collision.cpp  Collision.h
src/scenes/: GameOverScene.cpp  GameOverScene.h  GameScene.cpp  GameScene.h  MainMenuScene.cpp  MainMenuScene.h  Scene.cpp  Scene.h
src/ui/: UIElement.cpp  UIElement.h  UIManager.cpp  UIManager.h
src/utils/: Dimension.h  Position.h  Randomizer.cpp  Randomizer.h  SpriteLocation.cpp  SpriteLocation.h
